Fixed overlapping navbar issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,9 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /* prevent navbar overlap */
 }
+
 /* Buttons */
 .custom-button-filled {
     border: 2px solid var(--primary-color);
